# anaouder-server

./: .gitignore  LICENSE  Makefile  README.md  compose.yaml  pyproject.toml
api/: Dockerfile  files_store.py  main.py  requirements.txt  techiaith_job_queue_client.py
worker/: Dockerfile  audio_utils.py  json_conversion.py  persist.py  requirements.txt  speech_to_text_tasks.py  start_workers.sh  tasks.py
