[project]
name = "anaouder-server"
version = "0"
description = "To create a viritual environment for development purposes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aiofiles==23.2.1",
    "anaouder>=1.0.2",
    "celery>=5.3.4",
    "fastapi>=0.68.0,<0.69.0",
    "ffmpeg-normalize>=1.31.1",
    "fleep>=1.0.1",
    "httpx==0.27.0",
    "pydantic>=1.8.0,<2.0.0",
    "pydub>=0.25.1",
    "pympi-ling>=1.70.2",
    "python-multipart==0.0.9",
    "pyyaml==6.0.1",
    "redis>=5.0.0",
    "scipy>=1.15.2",
    "slowapi==0.1.9",
    "srt>=3.5.3",
    "uvicorn>=0.15.0,<0.16.0",
    "webvtt-py>=0.5.1",
    "yt-dlp>=2025.2.19",
]
